--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
 lib_LTLIBRARIES = libserial_port.la
-libserial_port_la_CXXFLAGS =-D_LINUX32
+libserial_port_la_CXXFLAGS =-D_LINUX32 -g -O0
 libserial_port_la_SOURCES = serial_port.cpp 
 
